@@ -1,3 +1,12 @@
+2012-03-22  Dave Abrahams  <dave@boostpro.com>
+
+	* gnus-sum.el (gnus-summary-insert-subject): Record information in the
+	registry about each article retrieved.
+
+	* gnus-int.el (gnus-select-group-with-message-id): New function.
+	(gnus-try-warping-via-registry): Ditto.
+	(gnus-warp-to-article): Fall back on the registry.
+
 2012-03-22  Sergio Martínez  <samf0xb58@gmail.com>  (tiny change)
 
 	* nnimap.el (nnimap-request-scan): Allow `nnimap-inbox' to be a list of
